--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -5,6 +5,8 @@
         <item>@font/architects_daughter</item>
         <item>@font/bungee_shade</item>
         <item>@font/creepster</item>
+        <item>@font/fascinate_inline</item>
         <item>@font/shojumaru</item>
+        <item>@font/unkempt_bold</item>
     </array>
 </resources>
