--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <array name="preloaded_fonts" translatable="false">
+        <item>@font/abeezee</item>
         <item>@font/akronim</item>
+        <item>@font/alegreya</item>
         <item>@font/architects_daughter</item>
+        <item>@font/bangers</item>
         <item>@font/bungee_shade</item>
         <item>@font/creepster</item>
         <item>@font/fascinate_inline</item>
         <item>@font/shojumaru</item>
         <item>@font/unkempt_bold</item>
+        <item>@font/walter_turncoat</item>
     </array>
 </resources>
